static/css/style.css
html, body, {
  height: 100%;
  width: 100%;
  margin: 0;
}

#countymap {
  display: none;
  position: relative;
  height: 100%;
  width: 100%;
}


#logo {
  text-align: left;
  margin: 10px 10px;
  z-index: 0;
}

#displayInfo {
  font-family: 'Roboto', sans-serif;
  margin: 20px 10px 0px 10px;
  padding: 10px;
  font-size: 15px;
  color: white;
  background-color: #555a66;
  opacity: 1;
  z-index: 0;
}

#displayStats {
  font-family: 'Roboto', sans-serif;
  display: inline-block;
  position: relative;
  height: 100%;
  width: 100%;
  vertical-align: top;
  margin: 20px 10px 0px 10px;
  padding: 10px;
  color: #555a66;
  z-index: 0;
}

.axis {
  font-family: 'Roboto', sans-serif;
  fill: none;
  stroke: #555a66;
  stroke-width: 1px;
  shape-rendering: crispEdges;
}

.bar-text {
  font-family: 'Roboto', sans-serif;
  font-size: 12px;
}

#mainPanel {
  padding: 0px;
  margin: 0px;
}

.map-path:hover {
  opacity: 1;
}

#logo {
  width: 80%;
}

#logo:hover {
  opacity: 0.8;
}

#logo:hover {
  opacity: 0.7;
}

#navbar {
  text-align: left;
  margin: 10px;
}


#mapCanvas {
  position: relative;
  width: 100%;
  vertical-align: top;
  margin: 10px;
  align-items: center;
}

.genre-icon {
  text-align: left;
  opacity: 1;
  width: 100%;
}

.genre-icon:hover {
  opacity: 0.7;
  /*chrome doesn't seem to like hovering to opacity: 1*/
}

*:focus {
  opacity: 1;
  outline: none;
}

#tooltip {
  position: absolute;
  text-align: center;
  padding: 20px;
  margin: 10px;
  font: 12px sans-serif;
  border-radius: 2px;
  pointer-events: none;
  background: rgba(0, 0, 0, 0.9);
  border-radius: 5px;
  font-size: 12px;
  padding: 4px;
  color: white;
  opacity: 0;
}

.custom .leaflet-popup-tip,
.custom .leaflet-popup-content-wrapper {

    text-align: center;
    background: rgba(0, 0, 0, 0.7);
    color: white;
}

#tooltip h4, .custom .leaflet-popup-content-wrapper h4 {
  margin: 0;
  font-size: 14px;
}

#tooltip table, .custom .leaflet-popup-content-wrapper table {
  text-align: center;
  width: 100%;
  white-space: nowrap;
}

#tooltip tr td, .custom .leaflet-popup-content-wrapper tr td {
  padding: 10px;
  margin: 0;
  opacity: 0.6;
}

#tooltip tr td:nth-child(1) {
  width: 50px;
}

#tooltip tr td:nth-child(2) {
  text-align: center;
}

/* Next two entries are for the colouring of the info text box*/

:root {
  --displayInfo-color: #888b94;
  --displayInfo-text-color: #FFFFFF;
	}

#displayInfo {
	background-color: var(--displayInfo-color);
	color: var(--displayInfo-text-color);
}

